#44 Fixes No visual keyboard focus on Readability options (#45)

--- a/less/visua11ySettings.less
+++ b/less/visua11ySettings.less
@@ -124,6 +124,10 @@
       margin: @item-margin / 2;
     }
 
+    .visua11ysettings__item-option:focus-within {
+      outline: auto;
+    }
+
     input {
       position: absolute;
       top: 0;
